# internal/httpapi/handler.go
@@ -260,6 +260,7 @@ func (h *Handler) routes() {
 	h.mux.HandleFunc("GET /v1/sync/runs", h.GetSyncRuns)
 	h.mux.HandleFunc("GET /v1/routes", h.GetRoutes)
 	h.mux.HandleFunc("GET /v1/activities", h.GetActivities)
+	h.mux.HandleFunc("GET /v1/activities/fitness", h.GetFitness)
 	h.mux.HandleFunc("GET /v1/activities/{activityId}/track", h.GetActivityTrack)
 	h.mux.HandleFunc("GET /v1/providers/{provider}/sourceRoutes/{sourceRouteId}/routes/{stageOrder}", h.GetRoute)
 	h.mux.HandleFunc(
